@@ -1,3 +1,6 @@
+[B]v1.1.0 (22.12.2012)[/B]
+- Fix:    Title for some concerts not found which produced a script error.
+
 [B]v1.0.9 (20.12.2012)[/B]
 - Change: Video now played via url and listitem entry
 
